Check if modules contain packages before attempting to open/export
(cherry picked from commit e8fdedc0b5ef8adcdb1141b9f1d11f835a73071c)